# fastapi-generic-template

./: .devcontainer.json  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci_cd.yml
app/: .env  main.py  settings.py
app/src/: api.py
app/tests/: test_server.py
scripts/: compile.py  setup.py
server/: .devcontainer.json  .dockerignore  Dockerfile  main.py  pyproject.toml  settings.py
server/src/: api.py  main.py  settings.py
server/tests/: test_server.py
src/: server.py  settings.py
